# CSC510

./: .gitignore  CODE_OF_CONDUCT.md  README.md  contributing.md  license.md
.github/: backend-tests.yml
.github/workflows/: backend-tests.yml  format.yml  syntax-check.yml
RAG/: README.md  requirements.txt
RAG/app/: api.py  config.py  ingest.py  query.py
RAG/data/: README.txt  project-1a-outline
RAG/tests/: test_smoke.py
proj2/: .dockerignore  .env  .gitignore  MANIFEST.in  README.md  docker-compose.test.yml  docker-compose.yml  setup.py  temp.py
proj2/.github/workflows/: backend-tests.yml  syntax-check.yml
proj2/backend/: .coveragerc  .env  .flake8  Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini  requirements.txt
proj2/backend/app/: auth_routes.py  database.py  dependencies.py  main.py  meal_routes.py  models.py  seed_data.py  user_routes.py  utils.py
proj2/backend/app/routes/: auth_routes.py  items.py  meal_routes.py  user_routes.py
proj2/backend/app/tests/: conftest.py  test_auth.py  test_auth_api.py  test_main.py  test_meals.py  test_meals_api.py  test_root_health_api.py  test_users.py  test_users_api.py
proj2/documentation/: INSTALL.md  taste-buddies-api-reference.md  taste-buddies-deployment-guide.md  taste-buddies-development-guide.md  taste-buddies-docs (1).md  taste-buddies-troubleshooting.md
proj2/frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.js
proj2/frontend/public/: index.html
proj2/frontend/src/: App.css  App.jsx  index.css  (+2 more)
proj2/seed/: mongo-init.js
proj2/tastebuddiez/: cli.py
(+14 files in other folders)
