[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tastebuddiez"
version = "0.1.0"
description = "Taste Buddiez — a food swap and local meal-sharing platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "motor==3.3.2",
    "pydantic==2.12.4",
    "python-dotenv==1.0.0",
    "pymongo==4.6.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.2",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "pytest",
    "pytest-asyncio",
    "httpx == 0.24.0",
    "pytest-cov",
    "coverage",
    "flake8",
    "black>=24.10.0"
    ]

[project.scripts]
tastebuddiez = "tastebuddiez.cli:main"

[tool.setuptools]
package-dir = {"tastebuddiez" = "../tastebuddiez"}
packages = ["app", "tastebuddiez"]
include-package-data = true
